--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,8 +1,11 @@
 .container{
+  z-index: 9999;
+  opacity: 0.9;
+  position: fixed;
   padding: 1rem;
   background: var(--blue-300);
-  opacity: 0.8;
   max-height: 9rem;
+  width: 100vw;
 
   display: flex;
   flex-direction: row;
