:sparkles: feat: create about page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,7 +21,7 @@ html {
  
 body {
   height: 100vh; 
-  background: var(--white-100);
+  background: var(--white);
   color: var(--white);
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizelegibility;
