--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -3,7 +3,7 @@
     padding-bottom: 5rem;
     color: var(--blue-300);
     padding: 2rem;
-    background-image: url(../../../public//images//background-about.svg);
+   // background-image: url(../../../public//images//background-about.svg);
     background-size: 100%;
     background-repeat: no-repeat;
  
@@ -12,4 +12,10 @@
    text-align: center;
    margin-bottom: 2rem;
    } 
+
+   p{
+    line-height: 3rem;
+    margin-top: 2rem;
+  
+   }
 }
