--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -2,6 +2,7 @@
   padding: 5rem 0;
   background: var(--blue-200);
   width: 100%;
+  color: var(--white);
 
   display: flex;
   flex-direction: column;
