--- a/src/components/Carousel/banner.module.scss
+++ b/src/components/Carousel/banner.module.scss
@@ -1,28 +1,28 @@
-.container{
-  position: relative;  
- }
-.banner{
-  img{
-    width: 100vw!important;
-   }
+.banner{ 
+  margin-top: 5rem; 
+
+  h3{
+    font-size:1.4rem;
+    line-height: 3rem;
+  }
+
   div{
+    width: 100vw;
     position: absolute;
     bottom: 0%;
     color: var(--white);
     line-height: 7rem;
     background-color: var(--blue-300);
     opacity: 0.5;
-    width:100%;
-    padding:  1.5rem 5rem
-   }  
+    padding: 0.8rem;
+    }  
 
     button{
       background: var(--white);
       border-radius: 50px;
-      padding: 1rem 3rem;
-      background: var(--white);
-      color: var(--blue-300);
-      font-size: 2.2rem;
+      padding: 0.5rem 1rem;
+       color: var(--blue-300);
+      font-size: 1.4rem;
       font-weight: bold;
       transition: all 0.2s;
       border: 1px solid var(--blue-100);
@@ -32,8 +32,25 @@
     }
    }
 
+
+
+   @media (min-width: 481px){
+    h3{
+      font-size: 2.5rem;
+    }
+  }
+
+  @media (min-width: 769px){
+    h3{
+      font-size: 3rem;
+      padding-bottom: 2rem;
+    }
+  }
+
  
 }
+
+
 
 
  
