--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,6 +28,7 @@ body {
   text-rendering: optimizelegibility;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  background: "#030917"
 } 
  
 
