--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -1,14 +1,16 @@
 .container{
+    font-size:1.4rem;
     margin-top: -45px;
     padding-bottom: 5rem;
     color: var(--blue-300);
     padding: 2rem;
     background-image: url(../../../public//images//background-about.svg);
     background-size: cover;
-     background-repeat: no-repeat;
+    background-repeat: no-repeat;
  
 
   h1{
+   font-size:1.8rem;
    text-align: center;
    margin-bottom: 2rem;
    } 
@@ -16,5 +18,14 @@
    p{
     line-height: 3rem;
     margin-top: 2rem;   
+   }
+
+   @media (min-width: 481px) {
+    font-size:1.6rem;
+
+    h1{
+      font-size:3rem; 
+    } 
+
    }
 }
