--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,13 +5,22 @@
  }
 
  :root{
-    --black: #28262E;
+   --black: #28262E;
    --white: #FFFFFF; 
    --white-100: #D9D9D9; 
    --blue-100: #60AFF8;
    --blue-200:#001E40;
    --blue-300: #030917;
    --blue-100: #60AFF8;
+
+   --sn-h1: 2rem;
+   --md-h1: 2.8rem;
+   --lg-h1: 3.6rem;
+
+   --sm-fs: 1.2rem; 
+   --md-fs: 1.6rem; 
+   --lg-fs: 2rem;  
+  
  }
 
 html {
@@ -33,7 +42,7 @@ body {
  
 
 body,input, textarea, select, button{
-  font: 400 1.6rem "Roboto",sans-serif;
+  font: 400 1.2rem "Roboto",sans-serif;
 }
  
 
