--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,9 +13,13 @@
    --blue-300: #030917;
    --blue-100: #60AFF8;
 
-   --sn-h1: 2rem;
-   --md-h1: 2.8rem;
-   --lg-h1: 3.6rem;
+   --sm-h1: 3.6rem;
+   --md-h1: 4.2rem;
+   --lg-h1: 5rem;
+
+   --sm-h2: 1.6rem;
+   --md-h2: 2.4rem;
+   --lg-h2: 3.2rem;
 
    --sm-fs: 1.2rem; 
    --md-fs: 1.6rem; 
